Fix white space issue on mobile.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@
 
 #mainContent {
     background-color: #3B3738;
+    overflow-x: hidden;
 }
 
 #content1 {
